# stackable-functor-allocation

./: CMakeLists.txt  README.md
include/stackable-functor-allocation/: Thread.hpp  error.h  mole.hpp  sfa.hpp
test/: Thread.cpp  invertable.cpp  mole.cpp  mole_gpx.cpp  mole_sycl.cpp  sfa.cpp
